[tool.poetry]
name = "octane11"
version = "0.1.0"
description = "Tool for easily collecting historical exchange rates between multiple currencies as well as doing exchange rate conversions for specific values and dates."
authors = ["Adrián Badilla"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
pylint = "^2.8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
